selfhost/test/parser/array_error_eof.out
Error at %FILE_NAME%:1:6
Unexpected end of file:
  |  [1, 2
          ^